        - Added extra options to rubthrough() so only a subpart of
          source image is used.
        - the image fills didn't handle filling with source images of
          less than four channels correctly
        - added comment support the postfix transform2() expression
          parser
        - transform2() can now produce images with other than 3 channels.
        - added a correct T_AVREF input mapping to the typemap to 
          simplify parameter lists
	- shut off one of the align subtests in the ft2 test.  The triggering
	  is likely an ft2 bug.
        - removed some half written scaling optimization code.
	- added /sw/lib and /sw/include to the Makefile.PL code for osX.
	- removed all references to the www.eecs.umich.edu page and changed
	  them to imager.perl.org ones.

0.43
	- added log() and exp() functions to transform2()
	- change the getpN() functions in transform2() to set a 
	  reasonable alpha if the input image has no alpha
	- document the constants that transform2() defines
	- skip the right number of tests when FT2 isn't available
	- This version pushed to CPAN because of skip problem in FT2 test.
	- only call FT_Get_Postscript_Name() on FT 2.0.6 and later
	- put the IM_LIBPATH and IM_INCPATH values first in the search
	  path so the builder gets their local versions if desired rather
	  than the system versions they might be trying to avoid
	- document the exp() and log() transform2() functions
	- document the constants normally set by transform2().

0.44
	- refer the user to appropriate documents in the example in 
	  Imager.pm
	- change the list of documents in Imager.pm to move the document 
	  names out of the =item lines so we can make them into links

=================================================================

        For latest versions check the Imager-devel pages:
        http://imager.perl.org/~addi/perl/Imager/

=================================================================
